# f-final

./: .gitignore  data_cleaning.py  llmft.py  pyproject.toml  readme.md  requirements.txt
data_cleaning/: clean_v2.py  load_df.py  merged_df.py  purchase_df.py
demos/: baseline.ipynb  data.ipynb  demo.ipynb  llm_inference.ipynb
final/: __init__.py  data.py  dataset.py  evaluate.py  llm.py  utils.py
final/evaluate/: __init__.py  bm25.py  evaluate.py
scripts/: baseline.py  eda.py  gen_user_names.py  heatmap_tags.py  inference.py  parse.py  sas4rec_vis.py
