[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["final"]


[project]
name = "final"
authors = [
    {name = "Smark Lin", email = "r12942082@ntu.edu.tw"},
]
description = "TODO"
readme = "readme.md"
requires-python = ">=3.10"
# keywords = ["one", "two"]
# license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    # "torch==2.0.1",
    "packaging",
]
version = "0.0.3"

[project.optional-dependencies]
# scripts = [
#     "tensorboard",
#     "scikit-learn==1.3.1",
#     "xgboost",
#     "naive-flow @ git+https://github.com/bhbbbbb/naive-flow.git@v0.3.11",
# ]

[project.urls]
# Homepage = ""
# Documentation = ""
# Repository = ""
# Changelog = ""

# [project.scripts]
# my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/